Q4Web/q4-vpc-template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Base VPC, Network, and NAT Gateway.",
  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": { "default": "VPC Configuration" },
          "Parameters": [
            "Environment",
            "SSHKeyPair"
          ]
        },
        {
          "Label":{
            "default": "Billing Tags"
          },
          "Parameters": [
            "BillingGroup"
          ]
        }
      ],
      "ParameterLabels": {
        "SSHKeyPair": {
          "default": "SSH Key Pair"
        },
        "BillingGroup": {
          "default": "Billing Tag"
        }
      }
    }
  },
  "Parameters": {
    "Environment": {
      "Description": "Application environment for which this network is being created. e.g. Development/Production",
      "Type": "String",
      "Default": "Development",
      "AllowedValues": [
        "Development",
        "Test",
        "Staging",
        "Production"
      ]
    },
    "SSHKeyPair": {
      "Description": "SSH Keypair. Required for NatInstance configurations. (Not NatGateway)",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
    },
    "BillingGroup": {
      "Description": "A unique string that will be used to group all resources for billing (ex: Q4WEB-DR-NA, Q4WEB-PROD-EU)",
      "Type":"String"
    }
  },
  "Mappings": {
    "CIDRMapping": {
      "VPC": {
        "CIDR": "172.16.0.0/16"
      },
      "PublicSubnet": {
        "AZ1": "172.16.1.0/24",
        "AZ2": "172.16.2.0/24"
      },
      "WebSubnet": {
        "AZ1": "172.16.10.0/24",
        "AZ2": "172.16.11.0/24"
      },
      "AppSubnet": {
        "AZ1": "172.16.20.0/24",
        "AZ2": "172.16.21.0/24"
      },
      "CacheSubnet": {
        "AZ1": "172.16.30.0/24",
        "AZ2": "172.16.31.0/24"
      },
      "DBSubnet": {
        "AZ1": "172.16.40.0/24",
        "AZ2": "172.16.41.0/24"
      },
      "PrivateWebSubnet": {
        "AZ1": "172.16.50.0/24",
        "AZ2": "172.16.51.0/24"
      },
      "ADSubnet": {
        "AZ1": "172.16.100.0/24",
        "AZ2": "172.16.110.0/24"
      }
    }
  },
  "Resources": {
    "VPCBase": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Fn::FindInMap": [
            "CIDRMapping",
            "VPC",
            "CIDR"
          ]
        },
        "EnableDnsSupport": "True",
        "EnableDnsHostnames": "True",
        "InstanceTenancy": "default",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "VPC" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "PublicSubnetAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [ "0", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": {
          "Fn::FindInMap": [
            "CIDRMapping",
            "PublicSubnet",
            "AZ1"
          ]
        },
        "MapPublicIpOnLaunch": "True",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "PublicAZ1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": {
          "Ref": "VPCBase"
        }
      }
    },
    "PublicSubnetAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [ "1", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": {
          "Fn::FindInMap": [
            "CIDRMapping",
            "PublicSubnet",
            "AZ2"
          ]
        },
        "MapPublicIpOnLaunch": "True",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "PublicAZ2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": {
          "Ref": "VPCBase"
        }
      }
    },
    "WebSubnetAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [ "0", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": {
          "Fn::FindInMap": [ "CIDRMapping", "WebSubnet", "AZ1" ]
        },
        "MapPublicIpOnLaunch": "False",
        "Tags": [ 
            { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "WebSubnetAZ1" ] ] } },
            { "Key": "Environment", "Value": { "Ref": "Environment" } },
            { "Key": "network", "Value": "private" },
            { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": { "Ref": "VPCBase" }
      }
    },
    "WebSubnetAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { 
            "Fn::Select": [ "1", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": { 
            "Fn::FindInMap": [ "CIDRMapping", "WebSubnet", "AZ2" ] 
        },
        "MapPublicIpOnLaunch": "False",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "WebSubnetAZ2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "network", "Value": "private" },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": { "Ref": "VPCBase" }
      }
    },
    "PrivateWebSubnetAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [ "0", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": {
          "Fn::FindInMap": [ "CIDRMapping", "PrivateWebSubnet", "AZ1" ]
        },
        "MapPublicIpOnLaunch": "False",
        "Tags": [ 
            { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "PrivateWebSubnetAZ1" ] ] } },
            { "Key": "Environment", "Value": { "Ref": "Environment" } },
            { "Key": "network", "Value": "private" },
            { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": { "Ref": "VPCBase" }
      }
    },
    "PrivateWebSubnetAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { 
            "Fn::Select": [ "1", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": { 
            "Fn::FindInMap": [ "CIDRMapping", "PrivateWebSubnet", "AZ2" ] 
        },
        "MapPublicIpOnLaunch": "False",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "PrivateWebSubnetAZ2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "network", "Value": "private" },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": { "Ref": "VPCBase" }
      }
    },      
    "AppSubnetAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [ "0", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": {
          "Fn::FindInMap": [
            "CIDRMapping",
            "AppSubnet",
            "AZ1"
          ]
        },
        "MapPublicIpOnLaunch": "False",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "AppSubnetAZ1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "network", "Value": "private" },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": { "Ref": "VPCBase" }
      }
    },
    "AppSubnetAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [ "1", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": {
          "Fn::FindInMap": [
            "CIDRMapping",
            "AppSubnet",
            "AZ2"
          ]
        },
        "MapPublicIpOnLaunch": "False",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "AppSubnetAZ2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "network", "Value": "private" },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": { "Ref": "VPCBase" }
      }
    },
    "CacheSubnetAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [ "0", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": {
          "Fn::FindInMap": [
            "CIDRMapping",
            "CacheSubnet",
            "AZ1"
          ]
        },
        "MapPublicIpOnLaunch": "False",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "CacheSubnetAZ1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "network", "Value": "private" },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": { "Ref": "VPCBase" } 
      }
    },
    "CacheSubnetAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [ "1", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": {
          "Fn::FindInMap": [
            "CIDRMapping",
            "CacheSubnet",
            "AZ2"
          ]
        },
        "MapPublicIpOnLaunch": "False",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "CacheSubnetAZ2" ] ] } }, 
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "network", "Value": "private" },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": { "Ref": "VPCBase" }
      }
    },
    "DBSubnetAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [ "0", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": {
          "Fn::FindInMap": [
            "CIDRMapping",
            "DBSubnet",
            "AZ1"
          ]
        },
        "MapPublicIpOnLaunch": "False",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "DBSubnetAZ1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "network", "Value": "private" },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": { "Ref": "VPCBase" }
      }
    },
    "DBSubnetAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [ "1", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": {
          "Fn::FindInMap": [
            "CIDRMapping",
            "DBSubnet",
            "AZ2"
          ]
        },
        "MapPublicIpOnLaunch": "False",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "DBSubnetAZ2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "network", "Value": "private" },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": { "Ref": "VPCBase" }
      }
    },
    "ADSubnetAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [ "0", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": {
          "Fn::FindInMap": [
            "CIDRMapping",
            "ADSubnet",
            "AZ1"
          ]
        },
        "MapPublicIpOnLaunch": "False",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "ADSubnetAZ1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "network", "Value": "private" },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": { "Ref": "VPCBase" }
      }
    },
    "ADSubnetAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [ "1", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "CidrBlock": {
          "Fn::FindInMap": [
            "CIDRMapping",
            "ADSubnet",
            "AZ2"
          ]
        },
        "MapPublicIpOnLaunch": "False",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "ADSubnetAZ2" ] ] }  },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "network", "Value": "private" },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ],
        "VpcId": { "Ref": "VPCBase" }
      }
    },
    "IGWBase": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "IGW" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "VGAIGWBase": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": { "Ref": "IGWBase" },
        "VpcId": { "Ref": "VPCBase"
        }
      }
    },
    "RouteTablePublic": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "Public" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "RouteTableWebAZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "WebAZ1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "RouteTableWebAZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "WebAZ2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "RouteTablePrivateWebAZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "PrivateWebAZ1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "RouteTablePrivateWebAZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "PrivateWebAZ2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },      
    "RouteTableAppAZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "AppAZ1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "RouteTableAppAZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "AppAZ2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "RouteTableCacheAZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "CacheAZ1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "RouteTableCacheAZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "CacheAZ2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "RouteTableDBAZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "DBAZ1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "RouteTableDBAZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "DBAZ2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "RouteTableADAZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "ADAZ1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "RouteTableADAZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPCBase" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "AWS::StackName" }, "ADAZ2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]
      }
    },
    "RoutePublicDefault": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTablePublic" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "IGWBase" }
      }
    },
    "RouteAssociationPublicAZ1Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnetAZ1" },
        "RouteTableId": { "Ref": "RouteTablePublic" }
      }
    },
    "RouteAssociationPublicAZ2Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnetAZ2" },
        "RouteTableId": { "Ref": "RouteTablePublic" }
      }
    },
    "RouteAssociationWebAZ1Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "WebSubnetAZ1" },
        "RouteTableId": { "Ref": "RouteTableWebAZ1" }
      }
    },
    "RouteAssociationWebAZ2Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "WebSubnetAZ2" },
        "RouteTableId": { "Ref": "RouteTableWebAZ2" }
      }
    },
    "RouteAssociationPrivateWebAZ1Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateWebSubnetAZ1" },
        "RouteTableId": { "Ref": "RouteTablePrivateWebAZ1" }
      }
    },
    "RouteAssociationPrivateWebAZ2Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateWebSubnetAZ2" },
        "RouteTableId": { "Ref": "RouteTablePrivateWebAZ2" }
      }
    },      
    "RouteAssociationAppAZ1Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "AppSubnetAZ1" },
        "RouteTableId": { "Ref": "RouteTableAppAZ1" }
      }
    },
    "RouteAssociationAppAZ2Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "AppSubnetAZ2" },
        "RouteTableId": { "Ref": "RouteTableAppAZ2" }
      }
    },
    "RouteAssociationCacheAZ1Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "CacheSubnetAZ1" },
        "RouteTableId": { "Ref": "RouteTableCacheAZ1" }
      }
    },
    "RouteAssociationCacheAZ2Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "CacheSubnetAZ2" },
        "RouteTableId": { "Ref": "RouteTableCacheAZ2" }
      }
    },
    "RouteAssociationDBAZ1Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "DBSubnetAZ1" },
        "RouteTableId": { "Ref": "RouteTableDBAZ1" }
      }
    },
    "RouteAssociationDBAZ2Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "DBSubnetAZ2" },
        "RouteTableId": { "Ref": "RouteTableDBAZ2" }
      }
    },
    "RouteAssociationADAZ1Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "ADSubnetAZ1" },
        "RouteTableId": { "Ref": "RouteTableADAZ1" }
      }
    },
    "RouteAssociationADAZ2Default": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "ADSubnetAZ2" },
        "RouteTableId": { "Ref": "RouteTableADAZ2" }
      }
    },
    "NATAZ1IP": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NATAZ1": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NATAZ1IP",
            "AllocationId"
          ]
        },
        "SubnetId": { "Ref": "PublicSubnetAZ1" },
        "Tags": [
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]    
      }
    },
    "WebRouteAZ1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTableWebAZ1" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATAZ1" }
      }
    },
    "PrivateWebRouteAZ1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTablePrivateWebAZ1" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATAZ1" }
      }
    },      
    "APPRouteAZ1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTableAppAZ1" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATAZ1" }
      }
    },
    "CacheRouteAZ1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTableCacheAZ1" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATAZ1" }
      }
    },
    "DBRouteAZ1": { 
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTableDBAZ1" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATAZ1" }
      }
    },
    "ADRouteAZ1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTableADAZ1" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATAZ1" }
      }
    },
    "NATAZ2IP": {
      "Type": "AWS::EC2::EIP",
      "Properties": { "Domain": "vpc" }
    },
    "NATAZ2": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NATAZ2IP",
            "AllocationId"
          ]
        },
        "SubnetId": { "Ref": "PublicSubnetAZ2" },
        "Tags": [
          { "Key": "q4:Billing:Group", "Value": {"Ref": "BillingGroup"}}
        ]       
      }
    },
    "WebRouteAZ2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTableWebAZ2" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATAZ2" }
      }
    },
    "PrivateWebRouteAZ2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTablePrivateWebAZ2" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATAZ2" }
      }
    },      
    "APPRouteAZ2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTableAppAZ2" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATAZ2" }
      }
    },
    "CacheRouteAZ2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTableCacheAZ2" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATAZ2" }
      }
    },
    "DBRouteAZ2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTableDBAZ2" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATAZ2" }
      }
    },
    "ADRouteAZ2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTableADAZ2" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATAZ2" }
      }
    }
  },
  "Outputs": {
    "outputVPCID": {
      "Value": { "Ref": "VPCBase" }
    },
    "outputSubnetPublicAZ1": {
      "Value": { "Ref": "PublicSubnetAZ1" }
    },
    "outputSubnetPublicAZ2": {
      "Value": { "Ref": "PublicSubnetAZ2" }
    }
  }
}
